--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
             <div class="estudante-div">
                 <img class="estudante-imagem" src="julio.jpg" alt="foto do julio">
                 <h3 class="estudante-nome">julio</h3>
-                <img class="estudante-icone" src="github.png" alt="icone github">
+                <img class="estudante-icone" src="ggithub.png" alt="icone github">
+                <img class="estudante-icone" src="linkedin.png" alt="icone github">
+                <img class="estudante-icone" src="instagram.png" alt="icone github">
             </div>
         </section>
+        <footer class="rodape">
+            <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+        </footer>
         
     </body>
     
